# dw-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_analysis.py
.github/workflows/: analysis.yml  tests.yml
data/raw/: README.md
data/raw/2026-06_initial/: E2026-06-01_2026-06-16.csv  E2026-06-01_2026-06-17.csv  Trace 10.csv  Trace 11.csv  Trace 12.csv  Trace 14.csv  Trace 15.csv  Trace 16.csv  Trace 17.csv  Trace 18.csv  Trace 20.csv  Trace 21.csv  Trace 26.csv  Trace 3.csv  Trace 4.csv  Trace 5.csv  Trace 7.csv
docs/: CRITICAL_REVIEW.md  KPI_DEFINITIONS.md
results/: SUMMARY.md  ci_log.txt
results/tables/: data_gaps.csv  enriched_full.parquet  kpi_by_regen_temp_bin.csv  plausibility_flags.csv  season_daily.csv  season_weekly.csv
src/dw_analysis/: __init__.py  config.py  enrich.py  ingest.py  kpi.py  pipeline.py  plots.py  psychro.py  quality.py  report.py
tests/: test_ingest.py  test_kpi.py  test_psychro.py
