[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "dw-analysis"
version = "0.1.0"
description = "Automated analysis of the University of Kassel solar-assisted desiccant wheel pilot plant"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "CoolProp>=6.4",
    "pyarrow>=14.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
